Bug 1200795, part 1 - Eliminate excessive detail from cycle collector graph memory reporting. r=njn